Quality fixes